# AI_Agents_DayTraders

./: README.md  pyproject.toml  requirements.txt
notebooks/: alpaca_api_test.ipynb
src/day_traders/: crew.py  main.py
src/day_traders/config/: agents.yaml  tasks.yaml
src/day_traders/tools/: alpaca_trade_tool.py
